--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,10 @@
   "projects": {
     "ang-architecture": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "inlineTemplate": true,
+        "inlineStyle": true
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -16,17 +19,10 @@
             "outputPath": "dist/ang-architecture",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/custom-theme.scss", "src/styles.css"],
             "scripts": []
           },
           "configurations": {
@@ -77,22 +73,17 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
             "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "02dc3799-932e-4637-a978-09b0705e78ef"
   }
 }
